Issue #7430: Remove lingering reference to cmp in recursion error message.